--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" type="image/x-icon" href=https://www.citypng.com/public/uploads/preview/-31600820312ul4k3slsv1.png>
 
-    <title>React Template</title>
+    <title>AiR bNb</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
