--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/x-icon" href=https://www.citypng.com/public/uploads/preview/-31600820312ul4k3slsv1.png>
+    <link rel="icon" type="image/x-icon" href=https://cdn-icons-png.flaticon.com/512/2111/2111320.png>
 
     <title>AiR bNb</title>
   </head>
